--- a/Todo List/package.json
+++ b/Todo List/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "ecommerce-site",
+  "name": "todo-list",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
-  "author": "EcommerceSite",
+  "author": "Jenil Gohel",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.2.0",
-    "mongoose": "^7.0.3",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
   }
 }
