--- a/Redux_App/server/package.json
+++ b/Redux_App/server/package.json
@@ -1,27 +1,25 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "client": "npm start --prefix ../client",
+    "dev": "concurrently \" npm run server\" \" npm run client\""
   },
   "author": "Jenil Gohel",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "colors": "^1.4.0",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express-fileupload": "^1.4.0",
-    "express-formidable": "^1.2.0",
-    "jsonwebtoken": "^9.0.1",
+    "express": "^4.18.2",
     "mongodb": "^5.7.0",
-    "moongose": "^1.0.0",
+    "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
